--- a/smartfridge/config.ini
+++ b/smartfridge/config.ini
@@ -2,3 +2,6 @@
 SlackToken      = xoxp-267167456709-268110163879-280860661282-a4fd156159fbab0ba6d2b7e3b24b3e1d
 SlackChannel    = C8650A1C1
 BotName         = FridgeBot
+
+[CLARIFAI]
+APIKey          = ae52667416704382a99ffbb2ccbbfd27
