basic connection to clarifai API (upload image and get response)

--- a/smartfridge/config.ini
+++ b/smartfridge/config.ini
@@ -4,4 +4,6 @@ SlackChannel    = C8650A1C1
 BotName         = FridgeBot
 
 [CLARIFAI]
-APIKey          = ae52667416704382a99ffbb2ccbbfd27
+APIKey          = b9a2de7676aa4fadb74a5c59ea15ecba
+;Note: API Keys do not expire.
+;In case your API Key gets compromised, you should delete that key, and create a new one with the same scopes.
