Changed gitignore to ingor pycache and moved clarifai code to main function

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ smartfridge/.idea/
 # Ignore Emacs backup save files
 *~
 
-# Ignore pyc (compile) files
-*.pyc
+# Ignore complete pycache files
+__pycache__/
