--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@ __pycache__/
 
 # Ignore folder with images for training
 train_images/
+
+# Ignore python virtual environment
+smartfridge/bin
+smartfridge/include
+smartfridge/lib
+smartfridge/lib64
+smartfridge/pip-selfcheck.json
