changed main to work with new sql

--- a/smartfridge/config.ini
+++ b/smartfridge/config.ini
@@ -11,6 +11,6 @@ Model           = smartfridge
 
 [MYSQL]
 Host            = localhost
-User            = smartfridge
-Password        = fridge
+User            = root
+Password        = 
 Database        = smartfridge
