--- a/smartfridge/config.ini
+++ b/smartfridge/config.ini
@@ -8,3 +8,6 @@ APIKey          = b9a2de7676aa4fadb74a5c59ea15ecba
 Model           = smartfridge
 ;Note: API Keys do not expire.
 ;In case your API Key gets compromised, you should delete that key, and create a new one with the same scopes.
+
+[IMAGE_PROCESSING]
+Stages		= dummy,greyscale,dummy
