fixed HTTP 500 error, deleted reset button, PW for mysql user

--- a/smartfridge/config.ini
+++ b/smartfridge/config.ini
@@ -12,5 +12,5 @@ Model           = smartfridge
 [MYSQL]
 Host            = localhost
 User            = root
-Password        = 
+Password        = root
 Database        = smartfridge
